--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fuse.js": "^6.6.2",
     "mongoose": "^7.0.0"
   },
   "contributors": [
