--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
+    "ml-regression-multivariate-linear": "^2.0.4",
     "mongoose": "^7.0.0"
   },
   "contributors": [
