--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,8 @@
     "@ckeditor/ckeditor5-react": "^6.0.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.10.5",
+    "tailwind-merge": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
