--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
