--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,18 +7,27 @@
     "@ckeditor/ckeditor5-react": "^6.0.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@material-tailwind/react": "^1.4.2",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "d": "^1.0.1",
     "dotenv": "^16.0.3",
+    "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.10.5",
+    "styled-components": "^5.3.10",
+    "tailwind-merge": "^1.12.0",
+    "uui": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +57,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.1"
   }
 }
