--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.10.5",
+    "tailwind-merge": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +50,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.1"
   }
 }
