--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "nodemailer": "^6.9.2"
   },
   "contributors": [
     {
