--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
+    "apexcharts": "^3.40.0",
     "axios": "^1.3.4",
     "d": "^1.0.1",
     "dotenv": "^16.0.3",
+    "echarts": "^5.4.2",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
@@ -29,7 +33,8 @@
     "styled-components": "^5.3.10",
     "tailwind-merge": "^1.12.0",
     "uui": "^1.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
