--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
     "mongoose": "^7.0.0",
-    "nodemailer": "^6.9.2"
+    "nodemailer": "^6.9.2",
+    "react-toastify": "^9.1.3"
   },
   "contributors": [
     {
