--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,11 +17,14 @@
     "axios": "^1.3.4",
     "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
+    "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^1.12.0",
+    "uui": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
