--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,9 +20,8 @@
     "fuse.js": "^6.6.2",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.2",
-    "react-toastify": "^9.1.3"
-    "ml-regression-multivariate-linear": "^2.0.4",
-    "mongoose": "^7.0.0"
+    "react-toastify": "^9.1.3",
+    "ml-regression-multivariate-linear": "^2.0.4"
   },
   "contributors": [
     {
