--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "build": "npm i"
   },
   "repository": "https://github.com/Mr-RiVi/creativeconnect-mern",
   "author": "Rivindu Fernando",
